mariadb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb

    spec:
      serviceAccountName: mariadb
      automountServiceAccountToken: false

      containers:
        - name: mariadb
          image: mariadb:11.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: mysql
              containerPort: 3306

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
