wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress

  template:
    metadata:
      labels:
        app: wordpress

    spec:
      serviceAccountName: wordpress
      automountServiceAccountToken: false

      containers:
        - name: wordpress
          image: wordpress:php8.3-apache
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
