nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: wordpress
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
