def-deny-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: wordpress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
